log
Thu 21 Mar 2024 08:41:49 PM UTC: 
 exercises.c | 83 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 79 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:7: error: ‘i’ undeclared (first use in this function)
   46 |   for(i=0;i<=10;i++)
      |       ^
exercises.c:46:7: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:48:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |       push_back(L,i);
      |       ^~~~~~~~~
      |       pushBack
exercises.c:49:33: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   49 |       L= (List*)malloc(i*sizeof(List);
      |                                 ^~~~
exercises.c:49:38: error: expected ‘)’ before ‘;’ token
   49 |       L= (List*)malloc(i*sizeof(List);
      |                       ~              ^
      |                                      )
exercises.c:49:39: error: expected ‘;’ before ‘}’ token
   49 |       L= (List*)malloc(i*sizeof(List);
      |                                       ^
      |                                       ;
   50 | 
   51 |     }
      |     ~                                  
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:142:18: error: comparison between pointer and integer [-Werror]
  142 |   while(cadena[i]!=NULL)
      |                  ^~
exercises.c:146:23: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  146 |         push(P1,cadena[i]);
      |                 ~~~~~~^~~
      |                       |
      |                       char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:165:1: error: control reaches end of non-void function [-Werror=return-type]
  165 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e3fe0ac
Thu 21 Mar 2024 08:42:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:7: error: ‘i’ undeclared (first use in this function)
   46 |   for(i=0;i<=10;i++)
      |       ^
exercises.c:46:7: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:48:7: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |       pushback(L,i);
      |       ^~~~~~~~
      |       pushBack
exercises.c:49:33: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   49 |       L= (List*)malloc(i*sizeof(List);
      |                                 ^~~~
exercises.c:49:38: error: expected ‘)’ before ‘;’ token
   49 |       L= (List*)malloc(i*sizeof(List);
      |                       ~              ^
      |                                      )
exercises.c:49:39: error: expected ‘;’ before ‘}’ token
   49 |       L= (List*)malloc(i*sizeof(List);
      |                                       ^
      |                                       ;
   50 | 
   51 |     }
      |     ~                                  
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:142:18: error: comparison between pointer and integer [-Werror]
  142 |   while(cadena[i]!=NULL)
      |                  ^~
exercises.c:146:23: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  146 |         push(P1,cadena[i]);
      |                 ~~~~~~^~~
      |                       |
      |                       char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:165:1: error: control reaches end of non-void function [-Werror=return-type]
  165 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
731d2b5
